fix: prevent horizontal scrollbar from appearing on certain texts after finishing typing

--- a/frontend/src/components/typing-container/TextArea.css
+++ b/frontend/src/components/typing-container/TextArea.css
@@ -2,6 +2,7 @@
   margin: 15px;
   position: relative;
   padding: 0px;
+  width: calc(100% - 30px);
   font-size: 1.4rem;
   white-space: pre-wrap;
   line-height: 1.4;
